modify metting section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
         <!-- ------Meeting Section----- -->
 
-        <section class="meet-section bg-gradient-to-r from-[#FF8938] to-[#FF0000] flex flex-col md:flex-row mt-[130px]">
+        <section class="meet-section bg-gradient-to-r from-[#FF8938] to-[#FF0000] flex flex-col md:flex-row mt-[130px] rounded-[10px]">
             <div class="l-div  px-[70px] md:w-1/2 flex justify-center items-center">
                 <div>
                     <h3 class="text-[2.8rem] font-extrabold text-[#F4F4F4] manrope-font">Meet Our Super Clients</h3>
