--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <!-- ------Meeting Section----- -->
 
         <section class="meet-section bg-gradient-to-r from-[#FF8938] to-[#FF0000] flex flex-col md:flex-row mt-[130px] rounded-[10px]">
-            <div class="l-div  px-[70px] md:w-1/2 flex justify-center items-center">
+            <div class="l-div  px-[70px] md:w-1/2 flex justify-center items-center bg-[url(./images/bg_cup.png)] bg-no-repeat bg-bottom">
                 <div>
                     <h3 class="text-[2.8rem] font-extrabold text-[#F4F4F4] manrope-font">Meet Our Super Clients</h3>
                     <p class="font-medium text-[#F4F4F4] manrope-font mt-5">There are many variations of passages of
@@ -233,7 +233,57 @@
     </main>
 
 
-    <footer>
+    <!---------------- footer section starts here----- -->
+    <footer class="bg-gradient-to-r  from-[#FF89381A] to-[#FF00001A] py-[100px]">
+        <div class="flex flex-col md:flex-row justify-between items-center md:max-w-7xl md:mx-auto mx-5">
+            <img src="images/cup.png" alt="">
+            <div class="flex justify-center gap-10 items-center">
+                <p class="text-[1.25rem] font-medium text-[#494949] manrope-font">Ready to get started?</p>
+                <button class="w-[164px] h-[56px] bg-gradient-to-r from-[#FF8938] to-[#FF0000] rounded-[10px] text-[1.25rem] font-bold text-white manrope-font ">Get Started</button>
+            </div>
+        </div>
+
+        <div class="md:max-w-7xl md:mx-auto flex flex-col md:flex-row justify-between mt-[100px] mx-5">
+            <div>
+                <h4 class="text-[1.25rem] font-semibold text-[#1C1C1C] manrope-rope"><a href="">Quick Links</a></h4>
+                <p class="text-[#494949] manrope-font mt-5"><a href="">About Us</a></p>
+                <p class="text-[#494949] manrope-font mt-[18px]"><a href="">Insurance</a></p>
+                <p class="text-[#494949] manrope-font mt-[18px]"><a href="">Home</a></p>
+                <p class="text-[#494949] manrope-font mt-[18px]"><a href="">Privacy Policy</a></p>
+            </div>
+
+            <div>
+                <h4 class="text-[1.25rem] font-semibold text-[#1C1C1C] manrope-rope"><a href="">Our Service</a></h4>
+                <p class="text-[#494949] manrope-font mt-5"><a href="">Life Insurance</a></p>
+                <p class="text-[#494949] manrope-font mt-[18px]"><a href="">Car Insurance</a></p>
+                <p class="text-[#494949] manrope-font mt-[18px]"><a href="">Health Insurance</a></p>
+                <p class="text-[#494949] manrope-font mt-[18px]"><a href="">House Insurance</a></p>
+            </div>
+
+            <div>
+                <h4 class="text-[1.25rem] font-semibold text-[#1C1C1C] manrope-rope"><a href="">Help</a></h4>
+                <p class="text-[#494949] manrope-font mt-5"><a href="">FAQs</a></p>
+                <p class="text-[#494949] manrope-font mt-[18px]"><a href="">Contact Us</a></p>
+            </div>
+
+            <div>
+                <h4 class="text-[1.5rem] font-semibold text-[#1C1C1C] manrope-rope"><a href="">Subscribe to our <br> newsletter</a></h4>
+                <form class="flex justify-start items-center mt-12">
+                    <input type="email" placeholder="Email address" class="border-b-1 outline-none pb-2">
+                    <button class="w-6 h-6 rounded-full flex justify-center items-center text-white bg-gradient-to-r from-[#FF8938] to-[#FF0000]">
+                       <i class="fa-solid fa-greater-than text-[10px]"></i>
+                    </button>
+                </form>
+
+                <div class="flex gap-5 mt-12">
+                    <span><a href=""><i class="fa-brands fa-facebook-f"></i></a></i></span>
+                    <span><a href=""><i class="fa-brands fa-twitter"></i></a></span>
+                    <span><a href=""><i class="fa-brands fa-instagram"></i></a></span>
+                </div>
+            </div>
+        </div>
+
+        <p class="max-w-7xl mx-auto text-center font-medium manrope-font text-[#494949] mt-[100px]"> &copy;2027 UIDesign.to - All rights reserved.</p>
 
     </footer>
 </body>
